--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <div class="navigation_outer">
                 <nav class="navigation_inner">
                     <ul>
-                        <li>
+                        <li id="home">
                             <a href="#">Home</a>
                         </li>
-                        <li>
+                        <li id="about">
                             <a href="#">About</a>
                         </li>
-                        <li>
+                        <li id="work">
                             <a href="#">Work</a>
                         </li>
                     </ul>
