--- a/index.html
+++ b/index.html
@@ -48,11 +48,7 @@
         </main>
     </div>
 
-    <div class="trenn_outer" id="trenn">
-        <div class="trenn_inner">
-            <h1>Work</h1>
-        </div>
-    </div>
+    <h1 class="headline">Work</h1>
 
     <div class="content_outer">
         <main class="content">
