--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lennart Syré Portfolio MG92</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
@@ -68,6 +69,12 @@
         </main>
     </div>
 
+    <div class="assistant_outer">
+        <div class="assistant_inner" id="assist"></div>
+        <div class="assistant_inner" id="assist-contact"></div>
+        <div class="assistant_inner" id="assist-info"></div>
+    </div>
+    
     <div class="placeholder"></div>
 
 </body>
