contact module & minor fixes

--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
         <div class="assistant_inner" id="assist"></div>
         <div class="assistant_inner" id="assist-contact"></div>
         <div class="assistant_inner" id="assist-info"></div>
+        <div class="contact">
+            <div class="contact_inner">
+                <p>contact</p>
+                <ul>
+                    <li>
+                        <a href="#">Instagram</a>
+                    </li>
+                    <li>
+                        <a href="#">GitHub</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     
     <div class="placeholder"></div>
