/assistant/contact minor changes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="assistant_inner" id="assist-info"></div>
         <div class="contact">
             <div class="contact_inner">
-                <p>contact</p>
+                <p>CONTACT:</p>
                 <ul>
                     <li>
                         <a href="#">Instagram</a>
