--- a/index.html
+++ b/index.html
@@ -70,9 +70,33 @@
     </div>
 
     <div class="assistant_outer">
-        <div class="assistant_inner" id="assist"></div>
-        <div class="assistant_inner" id="assist-contact"></div>
-        <div class="assistant_inner" id="assist-info"></div>
+        <div class="assistant_inner" id="assist">
+            <div class="icon">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="-40 -40 600 600" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <path d="M492,236H276V20c0-11.046-8.954-20-20-20c-11.046,0-20,8.954-20,20v216H20c-11.046,0-20,8.954-20,20s8.954,20,20,20h216
+                        v216c0,11.046,8.954,20,20,20s20-8.954,20-20V276h216c11.046,0,20-8.954,20-20C512,244.954,503.046,236,492,236z"/>
+                </svg>
+            </div>
+        </div>
+        <div class="assistant_inner" id="assist-contact">
+            <!-- papierflieger animieren -> fliegt und öffnet contact fenster -->
+            <div class="icon">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                viewBox="0 0 512.001 512.001" style="enable-background:new 0 0 512.001 512.001;" xml:space="preserve">
+                <path d="M507.608,4.395c-4.243-4.244-10.609-5.549-16.177-3.321L9.43,193.872c-5.515,2.206-9.208,7.458-9.42,13.395
+                c-0.211,5.936,3.101,11.437,8.445,14.029l190.068,92.181l92.182,190.068c2.514,5.184,7.764,8.455,13.493,8.455
+                c0.178,0,0.357-0.003,0.536-0.01c5.935-0.211,11.189-3.904,13.394-9.419l192.8-481.998
+                C513.156,15.001,511.851,8.638,507.608,4.395z M52.094,209.118L434.72,56.069L206.691,284.096L52.094,209.118z M302.883,459.907
+                l-74.979-154.599l228.03-228.027L302.883,459.907z"/>
+                </svg>
+            </div>
+        </div>
+        <div class="assistant_inner" id="assist-info">
+            <div class="icon">
+                <p>i</p>
+            </div>
+        </div>
         <div class="contact">
             <div class="contact_inner">
                 <p>CONTACT:</p>
@@ -84,6 +108,11 @@
                         <a href="#">GitHub</a>
                     </li>
                 </ul>
+            </div>
+        </div>
+        <div class="info">
+            <div class="info_inner">
+                <p>NEWS:</p>
             </div>
         </div>
     </div>
