--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lennart Syré Portfolio MG92</title>
     <link rel="stylesheet" href="css/style.css">
@@ -36,13 +36,13 @@
                 <h1 class="headline">Übersicht</h1>
                 <div class="uebersicht_inner">
                     <div class="image_outer" id="img_one">
-                        <img src="img/scrim.jpg" alt="">
+                        <img src="img/images/scrim.jpg" alt="">
                     </div>
                     <div class="image_outer" id="img_two">
-                        <img src="img/scrim.jpg" alt="">
+                        <img src="img/images/scrim.jpg" alt="">
                     </div>
                     <div class="image_outer" id="img_three">
-                        <img src="img/scrim.jpg" alt="">
+                        <img src="img/images/scrim.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -56,13 +56,13 @@
             <div class="uebersicht">
                 <div class="uebersicht_inner">
                     <div class="image_outer" id="img_one">
-                        <img src="img/scrim.jpg" alt="testimg">
+                        <img src="img/images/scrim.jpg" alt="testimg">
                     </div>
                     <div class="image_outer" id="img_two">
-                        <img src="img/scrim.jpg" alt="testimg">
+                        <img src="img/images/scrim.jpg" alt="testimg">
                     </div>
                     <div class="image_outer" id="img_three">
-                        <img src="img/scrim.jpg" alt="testimg">
+                        <img src="img/images/scrim.jpg" alt="testimg">
                     </div>
                 </div>
             </div>
